본서버 적용후 버그가 있어 재수정 후 재업로드

--- a/app/2.html
+++ b/app/2.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html>
-  <head>
-  <meta charset="utf-8">
-  <body>
-    <h2>생성완료
-</h2>  
-  </body>
-    
-  </head>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+ 연습2. html1 수정완료
+</body>
 </html>
